# N-Body-Improved

./: .gitignore  .gitmodules  README.md  dataSim.py  index.html  main.ipynb  main.py  requirements.txt  spacefacts.txt
.github/workflows/: codeql-analysis.yml
cpp/: CMakeLists.txt  Makefile  Simulator.cpp  a.out  forces.cpp  forces.h  run_tests.cpp  tests.cpp  tests.h
css/: styles.css
legacy_cpp/: simulate.cpp
media/: intro.mov
src/: calculateTrajectories.py  forces.py  leapfrog.py  rungekatta.py  rungekutta.py  systems.py
